--- a/styles.css
+++ b/styles.css
@@ -91,12 +91,12 @@ section{
     display: grid;
     grid-template-columns: repeat(9, minmax(0, 1fr));
     grid-template-rows: repeat(6, minmax(0, 1fr));
-    gap: 3.2rem;
+    column-gap: 3.2rem;
 
     margin-top: 2.4rem;
 }
 
-section > div.left img{
+section > div.left #gato{
     width: 100%;
     object-fit: cover;
     overflow: hidden;
@@ -127,9 +127,8 @@ section > div.left img{
     line-height: 160%;
 }
 
-.symbols{
-    display: flex;
-    gap: 1.2rem;
+.symbols img + img{
+    margin-left: 1.2rem;
 }
 
 .symbols #like, .symbols #deslike{
@@ -140,18 +139,20 @@ aside{
     grid-column: span 3 / span 3;
     grid-row: span 6 / span 6;
     
+    height: 100%;
+}
+
+aside .artigos{
     display: flex;
     flex-direction: column;
     gap: 2rem;
 
-    height: 100%;
-
+    margin-top: 2rem;
 }
 
 aside h1{
     font-size: 2.4rem;
     line-height: 160%;
-    
 }
 
 figure{
@@ -188,23 +189,54 @@ footer p{
     section{
         grid-template-columns: repeat(6, minmax(0, 1fr));
     }
+    
+    .cabecalho{
+        display: block;
+    }
+
+    .cabecalho h1{
+        font-size: 1.8rem;
+        margin-bottom: .8rem;
+    }
+
+    .symbols img + img{
+        margin-left: .8rem;
+    }
+
+    .left p{
+        margin-top: 2.4rem;
+        padding-bottom: 2.8rem;
+    }
 
     aside{
         grid-column: span 6 / span 6;
     }
 
-    .cabecalho h1{
-        font-size: 2rem;
+    aside h1{
+        margin-bottom: 2rem;
+        font-size: 1.8rem;
     }
 
     figure figcaption h2{
-        font-size: 1.8rem;
+        font-size: 1.1rem;
         line-height: 160%;
     }
     
     figure figcaption p{
-        font-size: 1.4rem;
+        font-size: 1rem;
         line-height: 160%;
     }
 
+    .input-wrapper input{
+        font-size: 1.2rem;
+        line-height: 100%;
+    }
+
+    header .logo, header form + img, #like, #deslike{
+        width: 3.5rem;
+    }
+
+    footer p{
+        font-size: 1.4rem;
+    }
 }   
